--- a/index.css
+++ b/index.css
@@ -25,10 +25,33 @@ h3 {
 a:hover {
     background-color: green;
 }
+
 a {
     font-size: xx-large;
- }
+}
 
  a:active {
     font-size: xxx-large;
- }
+}
+
+button {
+    background-color: black;
+    color: orangered;
+    border: 2px solid black;
+    font-size: 16px;
+    border-radius: 10px;
+    padding: 15px 30px;
+    text-align: center;
+    display: inline-block;
+}
+
+button:hover {
+    border: 2px solid #FF6700;
+    cursor: pointer;
+    box-shadow: 0px 2px 5px orange;
+}
+
+button:active {
+    padding: 12px 27px;
+    box-shadow: 0px 0px 0px orange;
+}
