made background* responsive

--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
 body {
-    /*background-color: orangered;*/
     background-image: linear-gradient(orangered, orange);
 }
 
@@ -55,4 +54,8 @@ button:hover {
 button:active {
     padding: 12px 27px;
     box-shadow: 0px 0px 0px orange;
+}
+
+html {
+    min-height: 100%;
 }
