--- a/blog.css
+++ b/blog.css
@@ -1,6 +1,6 @@
 body {
-    /*background-color: orangered;*/
     background-image: linear-gradient(orangered, orange);
+    
 }
 
 li {
@@ -55,4 +55,8 @@ button:hover {
 button:active {
     padding: 12px 27px;
     box-shadow: 0px 0px 0px orange;
+}
+
+html {
+    min-height: 100%;
 }
