--- a/index.css
+++ b/index.css
@@ -4,7 +4,6 @@ body {
 
 li {
     font-size: x-large;
-
 }
 
 p {
@@ -58,5 +57,9 @@ button:active {
 }
 
 html {
-    min-height: 100%;
+    /*min-height: 100%;*/
+}
+
+iframe {
+    height: 1000px;
 }
