--- a/blog.css
+++ b/blog.css
@@ -1,66 +1,47 @@
 body {
-    background-image: linear-gradient(orangered, orange);
-    
+    background-image: linear-gradient(orange, orangered);
 }
 
 li {
-    font-size:large;
+    font-size: large;
 }
 
 p {
-    font-size: x-large; 
+    font-size: x-large;
 }
 
-h1 {
-    text-align: center
-}
-
-h2 {
-    text-align: center
-}
-
+h1,
+h2,
 h3 {
-    text-align: center;
+    text-align: center
 }
 
-a:hover {
-    background-color: green;
-}
-
-a {
-   font-size: xx-large;
-}
-
-a:active {
-    font-size: xxx-large; 
-}
-
-button {
-    background-color: black;
-    color: orangered;
+#homeLink {
+    background-color: rebeccapurple;
+    color: white;
     border: 2px solid black;
-    font-size: 16px;
     border-radius: 10px;
-    padding: 15px 30px;
+    box-shadow: 2px 4px 5px black;
+    padding: 1rem 2rem;
     text-align: center;
     display: inline-block;
+    font-size: x-large;
+    text-decoration: none;
 }
 
-button:hover {
-    border: 2px solid #FF6700;
+#homeLink:hover {
     cursor: pointer;
-    box-shadow: 0px 2px 5px orange;
 }
 
-button:active {
-    padding: 12px 27px;
-    box-shadow: 0px 0px 0px orange;
-}
-
-html {
-    min-height: 100%;
+#homeLink:active {
+    box-shadow: none;
 }
 
 hr {
     border: 1px solid black;
+}
+
+#btnWrapper {
+    display: flex;
+    justify-content: center;
 }
