--- a/index.css
+++ b/index.css
@@ -1,65 +1,54 @@
 body {
-    background-image: linear-gradient(orangered, orange);
+    background-image: linear-gradient(orange, orangered);
 }
 
-li {
+li,
+p {
     font-size: x-large;
 }
 
 p {
-    font-size: x-large; 
-}
-
-h1 {
-    text-align: center
-}
-
-h2 {
-    text-align: center
-}
-
-h3 {
     text-align: center;
 }
 
-a:hover {
-    background-color: green;
+h1,
+h2,
+h3 {
+    text-align: center
 }
 
-a {
-    font-size: xx-large;
+img {
+    width: 32rem;
+    height: 38rem;
 }
 
- a:active {
-    font-size: xxx-large;
-}
-
-button {
-    background-color: black;
-    color: orangered;
+#blogLink {
+    background-color: rebeccapurple;
+    color: white;
     border: 2px solid black;
-    font-size: 16px;
     border-radius: 10px;
-    padding: 15px 30px;
+    box-shadow: 2px 4px 5px black;
+    padding: 1rem 2rem;
     text-align: center;
     display: inline-block;
+    font-size: x-large;
+    text-decoration: none;
 }
 
-button:hover {
-    border: 2px solid #FF6700;
+#blogLink:hover {
     cursor: pointer;
-    box-shadow: 0px 2px 5px orange;
 }
 
-button:active {
-    padding: 12px 27px;
-    box-shadow: 0px 0px 0px orange;
+#blogLink:active {
+    box-shadow: none;
 }
 
-html {
-    /*min-height: 100%;*/
+#imgWrapper {
+    display: flex;
+    justify-content: center;
 }
 
-iframe {
-    height: 1000px;
+#btnWrapper {
+    display: flex;
+    justify-content: center;
 }
