--- a/index.css
+++ b/index.css
@@ -20,8 +20,9 @@ h3 {
 img {
     width: 32rem;
     height: 38rem;
-    border: 5px solid;
-    box-shadow: 2px 4px 5px;
+    border: 5px solid black !important;
+    box-shadow: 2px 4px 5px black !important;
+    
 }
 
 #blogLink {
@@ -53,4 +54,13 @@ img {
 #btnWrapper {
     display: flex;
     justify-content: center;
+}
+
+#spotifyWrapper {
+    width: 32rem;
+    height: 38rem;
+    float: left;
+    margin-left: 1rem;
+    box-shadow: 0 4px 8px 0 black;
+    border-radius: .75rem;
 }
