--- a/styles/index.css
+++ b/styles/index.css
@@ -25,6 +25,44 @@
     }
 }
 
+@keyframes spin {
+    from {
+    transform: rotateZ(0deg);
+    }
+    to {
+    transform: rotateZ(360deg);
+    }
+}
+
+.fa-react {
+    animation: spin infinite 20s linear;
+    color: #58c4dc;
+}
+
+.fa-css3-alt {
+    color: #264de4;
+}
+
+.fa-html5 {
+    color: #e44d26;
+}
+
+.fa-js {
+    color: #f7e018;
+}
+
+.fa-drupal {
+    color: #009cde;
+}
+
+.fa-git {
+    color: #f05035;
+}
+
+.fa-node {
+    color: #689f63;
+}
+
 h1,
 h2,
 h3 {
