--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -3,7 +3,8 @@
     justify-content: right;
     /* float: right; */
     /* padding: 1rem; */
-    font-size: calc(5px + 2vmin);
+    /* font-size: calc(5px + 2vmin); */
+    font-size: 1.5rem;
 }
 
 .navbar ul {
@@ -39,6 +40,7 @@
 @media(max-width: 450px) { 
     .navbar {
         font-size: calc(5px + 3vmin);
+        justify-content: center;
     }
 
     .navbar ul {
@@ -46,6 +48,13 @@
     }
 
     .navbar li a {
-        margin: 0.5rem 0.5rem;
+        margin: 0 1rem;
+    }
+}
+
+@media(max-width: 1250px) {
+    .navbar {
+        /* font-size: calc(5px + 3vmin); */
+        font-size: 1.25rem;
     }
 }
