--- a/styles/index.css
+++ b/styles/index.css
@@ -1,11 +1,11 @@
 .content {
     opacity: 0;
-    animation: fadeIn 2s ease-out forwards;
+    animation: fadeIn 1.5s ease-out forwards;
 }
 
 .animate {
     opacity: 1;
-    animation: fadeIn 2s ease-out forwards;
+    animation: fadeIn 1.5s ease-out forwards;
 }
 
 @keyframes gradientAnimation {
@@ -141,6 +141,7 @@ i {
 
     h1 {
         font-size: 1.5rem;
+        margin-top: 0;
     }
 
     h2 {
