--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,7 +1,7 @@
 .wrapper {
     display: flex;
     justify-content: center;
-    margin-top: 2rem;
+    margin-top: 4rem;
 }
 
 .projects {
@@ -66,6 +66,7 @@
     background-color: rgba(0, 0, 0, 0.75);
     border-radius: 10px;
     user-select: text;
+    
 }
 
 @keyframes appear {
@@ -92,28 +93,33 @@
 
 @media(max-width: 450px) {
     .projects {
-        display: flex;
-        flex-direction: column;
+        /* display: flex; */
+        grid-template-columns: repeat(2, 1fr) !important;
+        /* flex-direction: column; */
     }
 
     .project {
-        width: 18rem;
-        height: 20rem;
+        width: 10rem;
+        height: 11rem;
+        position: relative;
     }
 
     .textContainer {
         display: block;
         height: 40%;
-        overflow: scroll;
+        overflow: hidden;
+        transition: transform 0.5s ease, height 0.5s ease, background-color 0.5s ease;
+        touch-action: pan-y; /* Allow swipe on y-axis */
     }
 
     .project h3 {
-        font-size: 1.25rem;
+        font-size: 1rem;
         margin: 0.25rem 0;
+        margin-top: 0.5rem;
     }
 
     .project p {
-        font-size: 0.9rem;
+        font-size: 0.75rem;
         margin: 0;
     }
 }
