update TV Review project

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -53,7 +53,7 @@
 }
 
 #tv {
-    background-image: url('../assets/tv.jpg');
+    background-image: url('../assets/tvReview.png');
     background-position: center;
 }
 
