--- a/styles/projects.css
+++ b/styles/projects.css
@@ -4,6 +4,12 @@
     margin-top: 4rem;
 }
 
+footer {
+    display: none;
+    position: absolute;
+    bottom: 2rem;
+}
+
 .projects {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -94,6 +100,16 @@
 @media(max-width: 450px) {
     body {
         overflow: hidden;
+    }
+    
+    main {
+        display: flex;
+        justify-content: center;
+    }
+
+    footer {
+        display: inline-block;
+        font-size: 0.9rem;
     }
 
     .projects {
